nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
  # namespace: pibarrap044-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      hostAliases:
      - ip: "10.22.249.7"
        hostnames:
        - "backend-electronico-prueba2-electronico.apps.ocpprod.pjedomex.gob.mx"
      containers:
      - name: reverse-proxy
        image: registry.access.redhat.com/ubi9/nginx-122@sha256:e00298a14da31d7e875dfb9560ba0198c89ac533fb6705b993289320babb4988
        command: ["/usr/libexec/s2i/run"]
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 4
            memory: 6Gi
          requests:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
          #/etc/nginx/nginx.conf
          - name: reverse-proxy
            mountPath: /etc/nginx
      volumes:
        - name: reverse-proxy
          configMap:
            name: reverse-proxy
            defaultMode: 420
