nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
spec:
  selector:
    app: reverse-proxy
  type: ClusterIP
  ports:
  - name: reverse-proxy
    protocol: TCP
    port: 8080
    targetPort: 8080
