nginx/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: reverse-proxy
  # namespace: pibarrap044-dev
  labels: {}
spec:
  host: reverse-proxy-42.openshift.pjedomex.gob.mx
  path: /
  to:
    kind: Service
    name: reverse-proxy
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: reverse-proxy
  alternateBackends: []
